# LinuxTutorialCMS

./: .dockerignore  .editorconfig  .env  .env.docker.example  .env.example  .gitattributes  .gitignore  1_backend-test.txt  2_frontend-test.txt  BUGFIXES.md  CHANGELOG.md  CHANGELOG_502_FIX.md  CONFIGURATION_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_STANDARDS.md  Dockerfile  FEATURES.md  FIX_502_ERROR.md  INSTALLATION.md  QUICKSTART.md  QUICK_FIX.md  README.md  SECURITY.md  UPGRADE.md  ast.mjs  docker-compose.yml  eslint.config.js  index.html  k.md  package-lock.json  package.json  package.json.docs.md  playwright.config.js  postcss.config.js  snippet.mjs  snippet2.mjs  snippet3.mjs  snippet4.mjs  start-docker.bat  (+4 more)
.agent/rules/: rules.md
.claude/: settings.local.json
.github/: GIT_SETUP.md  dependabot.yml
.github/workflows/: ci.yml
.windsurf/workflows/: find-bugs.md  security-researched.md
backend/: .env.docker  Cargo.toml  Cargo.toml.docs.md  DOCKER_BUILD_FIX.md  Dockerfile  README.md  generate-lockfile.ps1  generate-lockfile.sh
backend/migrations/: 20241119_add_votes_and_admin_to_comments.sql  20241119_create_comment_votes.sql  20251123_add_allow_comments_to_site_posts.sql
backend/src/: auth.rs  csrf.rs  db.rs  db_migration_snippet.rs  lib.rs  main.rs  models.rs
backend/src/db/: migrations.rs  mod.rs  pool.rs  seed.rs
backend/src/handlers/: auth.rs  comments.rs  frontend_proxy.rs  mod.rs  repro_bug.rs  search.rs  site_content.rs  site_pages.rs  site_posts.rs  tutorials.rs  upload.rs
backend/src/handlers/site_pages/: mod.rs
backend/src/handlers/tutorials/: mod.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  security.rs
backend/src/models/: comment.rs  mod.rs  site.rs  tutorial.rs  user.rs
backend/src/repositories/: app_metadata.rs  comments.rs  common.rs  content.rs  mod.rs  pages.rs  posts.rs  token_blacklist.rs  tutorials.rs  users.rs
backend/src/routes/: admin.rs  api.rs  auth.rs  mod.rs
backend/src/security/: csrf.rs
backend/tests/: bug_fixes.rs  search_tests.rs
content/: site_content.json
e2e/: homepage.spec.js
nginx/: frontend.conf  nginx.conf
nginx-configs/: host-reverse-proxy.conf  ssl-reverse-proxy.conf
public/: manifest.json  manifest.json.docs.md  robots.txt  sw.js
src/: App.jsx  index.css  main.jsx
src/api/: client.js
src/components/: CodeBlock.jsx  Comments.jsx  ErrorBoundary.jsx  Footer.jsx  GlobalSiteMeta.jsx  Header.jsx  Hero.jsx  HeroNew.jsx  LanguageToggle.jsx  MarkdownRenderer.jsx  PageManager.jsx  ProtectedRoute.jsx  Quiz.jsx  SEO.jsx  SearchBar.jsx  ThemeToggle.jsx  TutorialCard.jsx  TutorialForm.jsx  TutorialSection.jsx
src/components/SiteContentEditor/: index.jsx
src/components/__tests__/: ProtectedRoute.test.jsx  ThemeToggle.test.jsx
src/components/admin/: AdminHeader.jsx  SettingsEditor.jsx  TutorialManagement.jsx
src/components/comments/: CommentForm.jsx  CommentItem.jsx
src/components/dynamic-page/: DynamicPageAbout.jsx  DynamicPageHero.jsx  DynamicPagePostList.jsx  PostCard.jsx
src/components/landing/: LandingCTA.jsx  LandingFeatures.jsx  LandingHero.jsx  LandingStats.jsx
src/components/layout/: Footer.jsx  Header.jsx
src/components/markdown/: MarkdownRenderer.jsx
src/components/page-manager/: PageForm.jsx  PageList.jsx  PageManager.jsx  PageStats.jsx  PostForm.jsx  PostsPanel.jsx  formUtils.js  index.js
src/context/: AuthContext.jsx  ContentContext.jsx  ThemeContext.jsx  TutorialContext.jsx
src/i18n/: config.js
src/pages/: AdminDashboard.jsx  DynamicPage.jsx  Grundlagen.jsx  Home.jsx  LandingPage.jsx  Login.jsx  PostDetail.jsx  TutorialDetail.jsx
src/test/: setup.js
src/utils/: contentNavigation.js  iconMap.js  pdfGenerator.js  postUtils.js  progressTracking.js  pwa.js  remarkMergeInlineParagraphs.js  sanitize.js  scrollToSection.js  slug.js  urlValidation.js
(+29 files in other folders)
